update by rainman

--- a/view/topic/inc/header.html
+++ b/view/topic/inc/header.html
@@ -100,7 +100,7 @@
 
 			<!-- Logo -->
 			<a class="logo pull-left" href="/">
-				<img src="/static/assets/images/logo_dark.png" alt="" />
+				<img src="/static/assets/images/ht-logo.png" alt="" style="width: 80%;height:80%" />
 			</a>
 
 			<!--
