--- a/view/topic/inc/base.html
+++ b/view/topic/inc/base.html
@@ -29,6 +29,7 @@
 	<!-- WEB FONTS : use %7C instead of | (pipe) -->
 	<!--<link href="http://fonts.useso.com/css?family=Open+Sans:300,400%7CRaleway:300,400,500,600,700%7CLato:300,400,400italic,600,700" rel="stylesheet" type="text/css" />-->
 
+	<script type="text/javascript" src="/static/assets/plugins/jquery/jquery-2.1.4.min.js"></script>
 	<!-- CORE CSS -->
 	<link href="/static/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 
@@ -92,137 +93,137 @@
 		<!--/HEADER-->
 		<!-- REVOLUTION SLIDER -->
 		{% block content %}{% endblock %}
-		<!-- FOOTER -->
-		<footer id="footer" class="footer-light" >
-			<div class="container">
+		<!--&lt;!&ndash; FOOTER &ndash;&gt;-->
+		<!--<footer id="footer" class="footer-light" >-->
+			<!--<div class="container">-->
 
-				<div class="row">
+				<!--<div class="row">-->
 
-					<div class="col-md-3">
-						<!-- Footer Logo -->
-						<img class="footer-logo" src="/static/assets/images/logo-footer-dark.png" alt="" />
+					<!--<div class="col-md-3">-->
+						<!--&lt;!&ndash; Footer Logo &ndash;&gt;-->
+						<!--<img class="footer-logo" src="/static/assets/images/logo-footer-dark.png" alt="" />-->
 
-						<!-- Contact Address -->
-						<address>
-								<ul class="list-unstyled">
-									<li class="footer-sprite address">
-										中国 陕西
-										西安雁塔区高新路
-										望庭国际1号楼2单元24层
-									</li>
-									<!--<li class="footer-sprite phone">-->
-										<!--电话: 86-029-88365435-->
+						<!--&lt;!&ndash; Contact Address &ndash;&gt;-->
+						<!--<address>-->
+								<!--<ul class="list-unstyled">-->
+									<!--<li class="footer-sprite address">-->
+										<!--中国 陕西-->
+										<!--西安雁塔区高新路-->
+										<!--望庭国际1号楼2单元24层-->
 									<!--</li>-->
-									<li class="footer-sprite email">
-										<a href="mailto:arterli@cmswing.com">arterli@cmswing.com</a>
-									</li>
-								</ul>
-							</address>
-						<!-- /Contact Address -->
+									<!--&lt;!&ndash;<li class="footer-sprite phone">&ndash;&gt;-->
+										<!--&lt;!&ndash;电话: 86-029-88365435&ndash;&gt;-->
+									<!--&lt;!&ndash;</li>&ndash;&gt;-->
+									<!--<li class="footer-sprite email">-->
+										<!--<a href="mailto:arterli@cmswing.com">arterli@cmswing.com</a>-->
+									<!--</li>-->
+								<!--</ul>-->
+							<!--</address>-->
+						<!--&lt;!&ndash; /Contact Address &ndash;&gt;-->
 
-					</div>
+					<!--</div>-->
 
-					<div class="col-md-3">
+					<!--<div class="col-md-3">-->
 
-						<!-- Latest Blog Post -->
-						<h4 class="letter-spacing-1">功能更新</h4>
-						<ul class="footer-posts list-unstyled">
-							{% topic data = "data",limit= "3",cid="118"%}
-							{%for t in data%}
-							<li>
-								<a href="{{t.name|get_url(t.id)}}">{{t.title}}</a>
-								<small>{{t.update_time|moment('lll')}}</small>
-							</li>
-							{%endfor%}
-						</ul>
-						<!-- /Latest Blog Post -->
+						<!--&lt;!&ndash; Latest Blog Post &ndash;&gt;-->
+						<!--<h4 class="letter-spacing-1">功能更新</h4>-->
+						<!--<ul class="footer-posts list-unstyled">-->
+							<!--{% topic data = "data",limit= "3",cid="118"%}-->
+							<!--{%for t in data%}-->
+							<!--<li>-->
+								<!--<a href="{{t.name|get_url(t.id)}}">{{t.title}}</a>-->
+								<!--<small>{{t.update_time|moment('lll')}}</small>-->
+							<!--</li>-->
+							<!--{%endfor%}-->
+						<!--</ul>-->
+						<!--&lt;!&ndash; /Latest Blog Post &ndash;&gt;-->
 
-					</div>
+					<!--</div>-->
 
-					<div class="col-md-2">
+					<!--<div class="col-md-2">-->
 
-						<!-- Links -->
-						<h4 class="letter-spacing-1">认识我们</h4>
-						<ul class="footer-links list-unstyled">
-							<li><a href="/">网站首页</a></li>
-							<li><a href="/about.html">关于我们</a></li>
-							<li><a href="/documentation">二次开发</a></li>
-							<li><a href="/donate.html">捐助我们</a></li>
-							<li><a href="/disclaimer.html">免责声明</a></li>
-							<li><a href="/licence.html">授权协议</a></li>
-							<li><a href="/contribute.html">贡献者名单</a></li>
-						</ul>
-						<!-- /Links -->
+						<!--&lt;!&ndash; Links &ndash;&gt;-->
+						<!--<h4 class="letter-spacing-1">认识我们</h4>-->
+						<!--<ul class="footer-links list-unstyled">-->
+							<!--<li><a href="/">网站首页</a></li>-->
+							<!--<li><a href="/about.html">关于我们</a></li>-->
+							<!--<li><a href="/documentation">二次开发</a></li>-->
+							<!--<li><a href="/donate.html">捐助我们</a></li>-->
+							<!--<li><a href="/disclaimer.html">免责声明</a></li>-->
+							<!--<li><a href="/licence.html">授权协议</a></li>-->
+							<!--<li><a href="/contribute.html">贡献者名单</a></li>-->
+						<!--</ul>-->
+						<!--&lt;!&ndash; /Links &ndash;&gt;-->
 
-					</div>
+					<!--</div>-->
 
-					<div class="col-md-4">
+					<!--<div class="col-md-4">-->
 
-						<!-- Newsletter Form -->
-						<h4 class="letter-spacing-1">邮件订阅</h4>
-						<p>订阅我们的邮件，以获得重要版本升级信息</p>
+						<!--&lt;!&ndash; Newsletter Form &ndash;&gt;-->
+						<!--<h4 class="letter-spacing-1">邮件订阅</h4>-->
+						<!--<p>订阅我们的邮件，以获得重要版本升级信息</p>-->
 
-						<form class="validate" action="php/newsletter.php" method="post" data-success="Subscribed! Thank you!" data-toastr-position="bottom-right">
-							<div class="input-group">
-								<span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-								<input type="email" id="email" name="email" class="form-control required" placeholder="请输入您的邮箱">
-								<span class="input-group-btn">
-										<button class="btn btn-primary" type="submit">订阅</button>
-									</span>
-							</div>
-						</form>
-						<!-- /Newsletter Form -->
+						<!--<form class="validate" action="php/newsletter.php" method="post" data-success="Subscribed! Thank you!" data-toastr-position="bottom-right">-->
+							<!--<div class="input-group">-->
+								<!--<span class="input-group-addon"><i class="fa fa-envelope"></i></span>-->
+								<!--<input type="email" id="email" name="email" class="form-control required" placeholder="请输入您的邮箱">-->
+								<!--<span class="input-group-btn">-->
+										<!--<button class="btn btn-primary" type="submit">订阅</button>-->
+									<!--</span>-->
+							<!--</div>-->
+						<!--</form>-->
+						<!--&lt;!&ndash; /Newsletter Form &ndash;&gt;-->
 
-						<!-- Social Icons -->
-						<div class="margin-top-20">
-							<a href="#" class="social-icon social-icon-border social-facebook pull-left" data-toggle="tooltip" data-placement="top" title="Facebook">
+						<!--&lt;!&ndash; Social Icons &ndash;&gt;-->
+						<!--<div class="margin-top-20">-->
+							<!--<a href="#" class="social-icon social-icon-border social-facebook pull-left" data-toggle="tooltip" data-placement="top" title="Facebook">-->
 
-								<i class="icon-facebook"></i>
-								<i class="icon-facebook"></i>
-							</a>
+								<!--<i class="icon-facebook"></i>-->
+								<!--<i class="icon-facebook"></i>-->
+							<!--</a>-->
 
-							<a href="#" class="social-icon social-icon-border social-twitter pull-left" data-toggle="tooltip" data-placement="top" title="Twitter">
-								<i class="icon-twitter"></i>
-								<i class="icon-twitter"></i>
-							</a>
+							<!--<a href="#" class="social-icon social-icon-border social-twitter pull-left" data-toggle="tooltip" data-placement="top" title="Twitter">-->
+								<!--<i class="icon-twitter"></i>-->
+								<!--<i class="icon-twitter"></i>-->
+							<!--</a>-->
 
-							<a href="#" class="social-icon social-icon-border social-gplus pull-left" data-toggle="tooltip" data-placement="top" title="Google plus">
-								<i class="icon-gplus"></i>
-								<i class="icon-gplus"></i>
-							</a>
+							<!--<a href="#" class="social-icon social-icon-border social-gplus pull-left" data-toggle="tooltip" data-placement="top" title="Google plus">-->
+								<!--<i class="icon-gplus"></i>-->
+								<!--<i class="icon-gplus"></i>-->
+							<!--</a>-->
 
-							<a href="#" class="social-icon social-icon-border social-linkedin pull-left" data-toggle="tooltip" data-placement="top" title="Linkedin">
-								<i class="icon-linkedin"></i>
-								<i class="icon-linkedin"></i>
-							</a>
+							<!--<a href="#" class="social-icon social-icon-border social-linkedin pull-left" data-toggle="tooltip" data-placement="top" title="Linkedin">-->
+								<!--<i class="icon-linkedin"></i>-->
+								<!--<i class="icon-linkedin"></i>-->
+							<!--</a>-->
 
-							<a href="#" class="social-icon social-icon-border social-rss pull-left" data-toggle="tooltip" data-placement="top" title="Rss">
-								<i class="icon-rss"></i>
-								<i class="icon-rss"></i>
-							</a>
+							<!--<a href="#" class="social-icon social-icon-border social-rss pull-left" data-toggle="tooltip" data-placement="top" title="Rss">-->
+								<!--<i class="icon-rss"></i>-->
+								<!--<i class="icon-rss"></i>-->
+							<!--</a>-->
 
-						</div>
-						<!-- /Social Icons -->
+						<!--</div>-->
+						<!--&lt;!&ndash; /Social Icons &ndash;&gt;-->
 
-					</div>
+					<!--</div>-->
 
-				</div>
+				<!--</div>-->
 
-			</div>
+			<!--</div>-->
 
-			<div class="copyright">
-				<div class="container">
-					<ul class="pull-right nomargin list-inline mobile-block">
-						<li><a href="#">条款与条件</a></li>
-						<li>&bull;</li>
-						<li><a href="#">隐私</a></li>
-					</ul>
-					&copy; 2015 - <script>document.write(new Date().getFullYear())</script> cmswing.com  版权所有 <!--{{controller.setup.WEB_SITE_TITLE}}--> <a href="http://www.miitbeian.gov.cn/" target="_blank">{{controller.setup.WEB_SITE_ICP}}</a>
-					<noscript><a href="http://www.51.la/?19065555" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/19065555.asp" style="border:none" /></a></noscript>
-				</div>
-			</div>
-		</footer>
-		<!-- /FOOTER -->
+			<!--<div class="copyright">-->
+				<!--<div class="container">-->
+					<!--<ul class="pull-right nomargin list-inline mobile-block">-->
+						<!--<li><a href="#">条款与条件</a></li>-->
+						<!--<li>&bull;</li>-->
+						<!--<li><a href="#">隐私</a></li>-->
+					<!--</ul>-->
+					<!--&copy; 2015 - <script>document.write(new Date().getFullYear())</script> cmswing.com  版权所有 &lt;!&ndash;{{controller.setup.WEB_SITE_TITLE}}&ndash;&gt; <a href="http://www.miitbeian.gov.cn/" target="_blank">{{controller.setup.WEB_SITE_ICP}}</a>-->
+					<!--<noscript><a href="http://www.51.la/?19065555" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/19065555.asp" style="border:none" /></a></noscript>-->
+				<!--</div>-->
+			<!--</div>-->
+		<!--</footer>-->
+		<!--&lt;!&ndash; /FOOTER &ndash;&gt;-->
 
 	</div>
 	<!-- /wrapper -->
@@ -327,7 +328,7 @@
 
 	<!-- JAVASCRIPT FILES -->
 
-	<script type="text/javascript" src="/static/assets/plugins/jquery/jquery-2.1.4.min.js"></script>
+
 	<script type="text/javascript">
 		var plugin_path = '/static/assets/plugins/';
 		$(function () {
